# y1-lnu

./: README.md
1dt901/mini-project/: BstMap.py  HashSet.py  LICENSE  README.md  part_one.py  part_three.py
1dt901/mini-project/data/: life_of_brian.txt.xz
1dt901/python_test/: mumble.py  only_positive.py  triangle.py
1dt901/sb224sc_assign1/: alarm.py  change.py  day_of_week.py  fahrenheit.py  hello.py  interest.py  largest.py  oddpositive.py  positive.py  print.py  quadratic.py  quote.py  shortname.py  sumofthree.py  tax.py  volume.py
1dt901/sb224sc_assign2/: abcd.py  all_even.py  birthday_candles.py  change_to_for.py  countdigits.py  deck.py  distance.py  eightball.py  functions_for_lists.py  largest_k.py  list_info.py  palindrome.py  pi_approx.py  print_primes.py  random_numbers.py  roll_the_die.py  salary_revision.py  sentence_builder.py  simple_math.py  simple_strings.py  tic_tac_toe.py
1dt901/testing/python_test/: triangle.py  two_functions.py
1dt902/Lab_0/: main.py
1dt902/Lab_1/: main.py
1dt902/Lab_2/: internet.py  main.py  mqtt_as.py  run.py
1dt902/Lab_3/: main.py
1dt902/project/: .gitignore  LICENSE  README.md
1dt902/project/doc/: hardware.md  requirements.md  setup.md  test.md  (+1 more)
1dt902/project/src/dummy_sql/: Cargo.toml  README.md
1dt902/project/src/dummy_sql/src/: insert.rs  lib.rs  main.rs  select.rs  user.rs
1dt902/test/: index.html  web_server.py
1dt903/: Lab1. Exercises_EN.docx  Lab1. Exercises_SV.docx
1dt903/bookstore/: a3_eer_diagram.mwb  book_store-schema.sql  books-data.sql  bookstore.py
1dt903/lab/: companny_db.sql
(+32 files in other folders)
