[package]
name = "dummy_sql"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
mysql = "23.0.0"
local-ip-address = "0.4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.20.0"